frontend/src/styles/FileManager/Path.module.css
.Path {
  display: flex;
  align-items: center;
  background-color: #fff;
  padding: 5px 24px;
  border-radius: 14px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
  font-size: 12px;
  color: #333;
  transition: box-shadow 0.3s ease;
  overflow: hidden;
}

.Path:hover {
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
}

.HomeIcon {
  color: #333;
  cursor: pointer;
  transition: color 0.3s ease, transform 0.3s ease, filter 0.3s ease;
}

.HomeIcon:hover {
  color: #000;
  transform: scale(1.2);
  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
}

.Breadcrumb {
  display: flex;
  align-items: center;
}

.Separator {
  color: #ccc;
  transition: color 0.3s ease;
}

.Separator:hover {
  color: #000;
}

.Crumb {
  position: relative;
  cursor: pointer;
  color: #6e6e6e;
  text-decoration: none;
  padding: 4px 8px;
  border-radius: 12px;
  transition: color 0.3s ease, transform 0.3s ease, background-color 0.3s ease;
}

.Crumb:hover {
  color: #007bff;
  transform: translateY(-1px);
}

.ActiveCrumb {
  color: #000; /* black background */
  font-weight: bold;
  padding: 4px 8px;
  border-radius: 12px;
  cursor: default;
  pointer-events: none;
  position: relative;
}

